--- a/standard-config/openmrs/i18n/clinical/locale_en.json
+++ b/standard-config/openmrs/i18n/clinical/locale_en.json
@@ -5,11 +5,12 @@
   "MODULE_LABEL_ACTIVE_PATIENTS_BY_LOCATION": "PatientsByLocation",
   "MODULE_LABEL_OPD_1_KEY": "OPD-1",
   "MODULE_LABEL_ALL_KEY": "All",
-  "MODULE_LABEL_NOTIFICATIONS_KEY": "Notification(s)",
+  "MODULE_LABEL_NOTIFICATIONS_KEY": "Notifications",
   "DASHBOARD_TITLE_LAB_RESULTS_KEY": "Lab Results",
   "DASHBOARD_TITLE_LAB_ORDERS_DISPLAY_CONTROL_KEY": "Lab Orders Fulfillment",
   "DASHBOARD_TITLE_PACS_KEY": "Pacs",
   "DASHBOARD_TITLE_RADIOLOGY_KEY": "Radiology",
+  "DASHBOARD_TITLE_PROCEDURE_DISPLAY_CONTROL_KEY": "Procedures",
   "DASHBOARD_TITLE_VISITS_KEY": "Visits",
   "DASHBOARD_TITLE_PROGRAMS_KEY": "Programs",
   "DASHBOARD_TITLE_TREATMENTS_KEY": "Treatments",
@@ -17,6 +18,7 @@
   "DASHBOARD_TITLE_DIAGNOSIS_KEY": "Diagnoses",
   "DASHBOARD_TITLE_ADMISSION_DETAILS_KEY": "Admission Details",
   "DASHBOARD_TITLE_NUTRITIONAL_VALUES_KEY": "Nutritional Values",
+  "DASHBOARD_TITLE_BASIC_DETAILS_KEY": "Basic Details",
   "DASHBOARD_TITLE_SECOND_VITALS_KEY": "Second Vitals",
   "DASHBOARD_TITLE_GYNAECOLOGY_KEY": "Gynaecology",
   "DASHBOARD_TITLE_HISTORY_AND_EXAMINATIONS_KEY": "History and Examinations",
@@ -34,8 +36,7 @@
   "DASHBOARD_TITLE_PULSE": "Pulse",
   "DASHBOARD_TITLE_FORMS2_DISPLAY_CONTROL_KEY":"Forms-2",
   "DASHBOARD_TITLE_FORMS2_OBS_TO_OBS_DISPLAY_CONTROL_KEY":"Forms-2 ObsToObs",
-  "DASHBOARD_TITLE_PROCEDURE_DISPLAY_CONTROL_KEY": "Procedure(s)",
-  "DASHBOARD_TITLE_BASIC_DETAILS_KEY": "Basic Details",
+
   "DASHBOARD_TAB_GENERAL_KEY": "General",
   "DASHBOARD_TAB_TRENDS_KEY": "Trends",
   "DASHBOARD_TAB_PATIENT_SUMMARY_KEY": "Patient Summary",
