--- a/standard-config/openmrs/i18n/home/locale_es.json
+++ b/standard-config/openmrs/i18n/home/locale_es.json
@@ -13,5 +13,6 @@
     "MODULE_LABEL_ATOMFEED_CONSOLE_KEY": "Consola AtomFeed",
     "MODULE_LABEL_APPOINTMENT_SCHEDULING_KEY": "Calendarización de Cita",
     "MODULE_LABEL_BED_MANAGEMENT_KEY": "Gestión de las camas",
-    "MODULE_LABEL_LAB_ENTRY_KEY": "Lab entry"
+    "MODULE_LABEL_LAB_ENTRY_KEY": "Lab entry",
+    "PATIENT_ADT_PAGE_KEY":"Patient ADT Page"
 }
