--- a/standard-config/openmrs/i18n/home/locale_zh.json
+++ b/standard-config/openmrs/i18n/home/locale_zh.json
@@ -13,5 +13,6 @@
     "MODULE_LABEL_ATOMFEED_CONSOLE_KEY": "AtomFeed 控制台",
     "MODULE_LABEL_APPOINTMENT_SCHEDULING_KEY": "预约安排",
     "MODULE_LABEL_BED_MANAGEMENT_KEY": "床位管理",
-    "MODULE_LABEL_LAB_ENTRY_KEY": "Lab entry"
+    "MODULE_LABEL_LAB_ENTRY_KEY": "Lab entry",
+    "PATIENT_ADT_PAGE_KEY":"Patient ADT Page"
 }
