--- a/standard-config/openmrs/i18n/home/locale_de.json
+++ b/standard-config/openmrs/i18n/home/locale_de.json
@@ -14,5 +14,5 @@
     "MODULE_LABEL_APPOINTMENT_SCHEDULING_KEY": "Appointment Scheduling",
     "MODULE_LABEL_BED_MANAGEMENT_KEY": "Bed Management",
     "MODULE_LABEL_LAB_ENTRY_KEY": "Lab entry",
-    "PATIENT_ADT_PAGE_KEY":"Patient ADT Page"
+    "PATIENT_ADT_PAGE_KEY":"Patienten Übersicht"
 }
